Resources/Public/CSS/catalog.css
/* ... */
.ctg-facet-prestige {
    background: #dadada;
    padding: 1rem;
    margin-top: 1px;
}

.ctg-facet-other {
    padding: 1rem;
}

.ctg-progress-item {
    width: 100%;
}

.ctg-facet-bar {
    margin-bottom: 5px;
    width: 100%;
    height: 10px;
    -webkit-border-radius: 20px;
    -moz-border-radius: 20px;
    border-radius: 20px;
    overflow: hidden;
    background: #dadada;
    display: block;
}

.ctg-hprogress {
    height: 10px;
    -webkit-radius: 20px;
    -moz-border-radius: 20px;
    border-radius: 20px;
    font-size: 8px;
    line-height: 8px;
    padding: 1px 0 0 5px;
    color: #b61f24;
    background: #b61f24;
    display: block;
}


/*----------------------------------------------------------------------
catalog detailview
----------------------------------------------------------------------*/

.ctg-detailview {
    border-bottom: 1px solid #dadada;
}

.ctg-ia-scnd-detail {
    text-align: right;
}

.ctg-detailview-head {
    width: 100%;
    display: table;
}

.ctg-dvh-main {
    display: table-cell;
    width: 70%;
    vertical-align: top;
}

.ctg-dvh-aside {
    display: table-cell;
    width: 30%;
    vertical-align: top;
    text-align: right;
    padding: 1rem;
}

.ctg-dvh-aside li {
    list-style-type: none;
    display: inline;
}

.ctg-detailview-media {
    margin: 0 1rem;
}

.ctg-detailview-media img {
    max-width: 100%;
}

.ctg-detailview-tabs {
    margin: 1rem;
    border: 1px solid #dadada;
}

.ctg-dtvt-menu {
    background: #dadada;
    margin: 0;
    padding: 0;
}

.ctg-dtvt-menu li {
    list-style-type: none;
    display: inline;
}

.ctg-dtvt-menu li a {
    display: inline-block;
    padding: 0.5rem 1rem;
    text-decoration: none;
    border-right: 1px solid #fff;
}

.ctg-dtvt-menu li a:hover {
    text-decoration: underline;
}

.ctg-dtvt-menu-active {
    background: #fff;
}

.ctg-dtvt-details {
    margin: 1rem 1rem 0 1rem;
    font-size: 0.875rem;
}

.ctg-dtvt-row {
    border-bottom: 1px dotted #dadada;
    display: table;
    width: 100%;
    margin-bottom: -1px;
}

.ctg-dtvt-label {
    display: table-cell;
    width: 30%;
    font-weight: bold;
    padding: 0.5rem 0;
    box-sizing: border-box;
    vertical-align: top;
}

.ctg-dtvt-content {
    display: table-cell;
    width: 60%;
    padding: 0.5rem 0;
    box-sizing: border-box;
    vertical-align: top;
}

.ctg-detail-normdata {
    background: #dadada;
}

.ctg-detailview-teaser {
    margin: 0 0 1rem 0;
}

.ctg-detailview-teaser section {
    margin: 1rem 1rem 0 1rem;
    display: -ms-grid;
    display: grid;
    grid-gap: 1rem;
    grid-template-columns: 1fr 1fr;
    align-items: stretch;
    -ms-flex-align: stretch;
}

/*.ctg-detailview-teaser section {*/
/*    margin: 0 0 0 1rem;*/
/*    display: grid;*/
/*    grid-template-columns: 33.33% 33.33% 33.33%;*/
/*}*/

.ctg-detailview-teaser article {
    background: #fff;
    border: 1px solid #dadada;
    padding: 1rem;
    margin: 1rem 1rem 0 0;
}

.ctg-detailview-teaser article ul {
    margin: 1rem 0 0 0;
    padding: 0;
}

/*.ctg-detailview-teaser article ul {*/
/*    margin: 0;*/
/*    padding: 0;*/
/*}*/

.ctg-detailview-teaser article li .icon {
    padding-right: 2rem !important;
}

.ctg-detailview-teaser i {
    display: block;
    color: #999;
    font-size: 0.875rem;
    margin-bottom: -0.2rem;
}

article.ctg-detail-showall {
    background: transparent;
    border: 1px solid #999;
}

article.ctg-detail-showall span.icon {
    margin: 0 0 1rem 0;
    font-size: 50px;
    line-height: 50px;
    width: auto;
    height: auto;
    display: block;
    float: left;
}



/*----------------------------------------------------------------------
catalog detailview – checkbox-hack
----------------------------------------------------------------------*/

input.ctg-hackbox {
    display: none;
}

span.ctg-readmore-content {
    display: none;
}

label.ctg-readmore {
    color: #000;
    vertical-align: middle;
}

label.ctg-readmore:hover {
    color: #b61f24;
}

label.ctg-readmore::before {
    font-family: 'belugino' !important;
    content: "\e92a";
    font-size: 2rem;
    line-height: 1rem;
    font-weight: normal;
    vertical-align: middle;
}

input.ctg-readmore:checked ~ span.ctg-readmore-content {
    display: block;
    margin: 1rem 0;
}

input.ctg-readmore:checked ~ label.ctg-readmore::before {
    content: "\e92b";
}

.ctg-detail-normdata .ctg-dtvt-row {
    border-bottom: 1px dotted #000;
}


/*----------------------------------------------------------------------
max 1080px
----------------------------------------------------------------------*/

@media only screen and (max-width: 1080px) {

    .ctg-header-home .ctg-hd-search {
        padding: 4rem 0;
    }

    .ctg-hd-meta-menu ul,
    .ctg-hd-search ul {
        font-size: 0%;
    }

    ul.token-input-list {
        font-size: 100% !important;
    }

    ul.ctg-search-terms {
        font-size: inherit;
    }

    .ctg-hd-search li a.ctg-hd-active:after {
        content: '';
        position: absolute;
        left: 25%;
        top: 1.2rem;
        width: 0;
        height: 0;
        border-left: 12px solid transparent;
        border-right: 12px solid transparent;
        border-bottom: 8px solid #fff;
        clear: both;
    }

    .ctg-hd-meta-menu .icon,
    .ctg-hd-search .icon {
        font-size: 3rem;
        margin-right: 1.8rem;
    }
}
/* ... */

